<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:elevation="0dp"
    android:orientation="vertical"
    tools:context=".fragments.AuthFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/please_enter_phone_number"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">


        <com.hbb20.CountryCodePicker
            android:id="@+id/cpp"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            app:ccp_autoFormatNumber="true"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="319dp"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/phone"
            android:inputType="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/enter_phone"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_background"
        android:elevation="0dp"
        android:fontFamily="@font/roboto"
        android:text="@string/submit"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/enter_code"
        android:layout_width="270dp"
        android:layout_height="79dp"
        android:layout_marginTop="144dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_code"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/send_code"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/roboto"
        android:text="@string/send_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone"
        app:layout_constraintVertical_bias="0.923" />
</androidx.constraintlayout.widget.ConstraintLayout>